force-app/main/default/objects/JGL_Member_Data_Migration__c/JGL_Member_Data_Migration__c.object-meta.xml
<CustomObject>
    <description>Custom object used for migrating members from JGL legacy program</description>
    <label>JGL Member Data Migration</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JGL Member Data Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>