force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/AppleLink__c.field-meta.xml
<CustomField>
    <fullName>AppleLink__c</fullName>
    <label>AppleLink</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>