force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/CIM_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>CIM_Customer_ID__c</fullName>
    <description>Reference external system customer record</description>
    <externalId>true</externalId>
    <label>CIM Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>