force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>JGL Member Data Migrations</relationshipLabel>
    <relationshipName>JGL_Member_Data_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>