force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where member has enrolled in Loyalty program</description>
    <inlineHelpText>Country where member has enrolled in Loyalty program</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>