force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/DateTimeCheck__c.field-meta.xml
<CustomField>
    <fullName>DateTimeCheck__c</fullName>
    <label>DateTimeCheck</label>
    <type>DateTime</type>
</CustomField>