force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>