force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/GoogleLink__c.field-meta.xml
<CustomField>
    <fullName>GoogleLink__c</fullName>
    <label>GoogleLink</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>