force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Just_Shop_Number__c.field-meta.xml
<CustomField>
    <fullName>Just_Shop_Number__c</fullName>
    <externalId>true</externalId>
    <label>Just Shop Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>