force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Loyalty_Program_MemberId__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_MemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Program Member</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>JGL Member Data Migrations</relationshipLabel>
    <relationshipName>JGL_Member_Data_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>