force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Migrated_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Member_Status__c</fullName>
    <label>Migrated Member Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>