force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Migration_Error__c.field-meta.xml
<CustomField>
    <fullName>Migration_Error__c</fullName>
    <label>Migration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>