force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <defaultValue>&apos;NotStarted&apos;</defaultValue>
    <label>Migration Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>