force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/MigrationType__c.field-meta.xml
<CustomField>
    <fullName>MigrationType__c</fullName>
    <defaultValue>&apos;Full&apos;</defaultValue>
    <label>MigrationType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>