force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/Person_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Status__c</fullName>
    <label>Person Account Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>