force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/SubTypeId__c.field-meta.xml
<CustomField>
    <fullName>SubTypeId__c</fullName>
    <label>SubTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>