force-app/main/default/objects/JGL_Member_Data_Migration__c/fields/TypeId__c.field-meta.xml
<CustomField>
    <fullName>TypeId__c</fullName>
    <label>TypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>